--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 os: linux
 script: make test
+before_install: sudo apt-get update && sudo apt-get install -y check
 sudo: required
-install: make dep
+install: make test
 language: c
